# medi-search-exercise

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyrightconfig.json
.github/agents/: Atlas.agent.md  Oracle-subagent.agent.md  Prometheus.agent.md  se-security-reviewer.agent.md  sw-engineer.agent.md
be/: .dockerignore  .gitignore  Dockerfile  config.py  main.py  pyproject.toml
be/models/: __init__.py
be/routers/: overlay.py  save.py  stats.py
be/services/: analytics.py  compositor.py
be/src/: config.py
be/src/models/: analytics.py
be/src/overlay/: compositor.py  file_utils.py  models.py  processing.py  router.py
be/src/routers/: overlay.py  save.py  stats.py
be/src/save/: models.py  router.py
be/src/services/: __init__.py  analytics.py  compositor.py
be/src/shared/: __init__.py  analytics_store.py  job_store.py
be/src/stats/: models.py  router.py
be/src/store/: __init__.py  jobs.py
be/store/: jobs.py
be/tests/: conftest.py  test_e2e_flow.py  test_jobs.py  test_overlay.py  test_save.py  test_stats.py
docs/code-review/: 2026-03-29-backend-security-review.md
fe/: .dockerignore  .env.example  .gitignore  Dockerfile  biome.json  jest.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.test.json
fe/src/admin/__tests__/: RatingBar.test.tsx  StatCard.test.tsx
fe/src/admin/components/: RatingBar.tsx  StatCard.tsx
fe/src/app/: layout.tsx  page.tsx
fe/src/app/admin/: page.tsx
fe/src/composer/__tests__/: FileUpload.test.tsx  (+2 more)
fe/src/lib/: api.ts  types.ts
plans/: e2e-tests-plan.md
(+5 files in other folders)
